# ishtar-oxide

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.sequential-lab  README.md  tinfoil-config.yml
.cargo/: config.toml
.github/workflows/: tinfoil-release-publish.yml  tinfoil-release.yml
crates/bench-client/: Cargo.toml
crates/bench-client/src/: main.rs
crates/bench-wasm/: Cargo.toml
crates/bench-wasm/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/examples/: encrypt-artifact.rs
crates/scheduler/src/: artifact.rs  main.rs  sandbox.rs  wasm.rs
crates/sequential-lab/: Cargo.toml  README.md
crates/sequential-lab/fixtures/: sequential_probe.wat  stream_capitalize.wat
crates/sequential-lab/src/: main.rs  protocol.rs  sandbox.rs  wasm.rs
docs/: research-notes.md  running-on-tinfoil.md  threat-model.md
profiles/: attacker_favorable.json  many_sessions.json  realistic.json  sub_ms_overlap.json
scripts/: compact-long-bench.jq  run-long-bench.sh  run-sequential-lab.sh  summarize-long-bench.jq
