[workspace]
members = [
    "crates/protocol",
    "crates/scheduler",
    "crates/bench-client",
    "crates/bench-wasm",
    "crates/sequential-lab",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "tokio"] }
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
getrandom = "0.4.3"
hex = "0.4.3"
libc = "0.2.186"
rand = "0.10.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
subtle = "2.6.1"
tokio = { version = "1.49.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6.8", features = ["limit", "trace"] }
uuid = { version = "1.22.0", features = ["v4"] }
wasmi = { version = "2.0.0-beta.7", default-features = false, features = ["std", "validate", "extra-checks", "portable-dispatch"] }
wasmparser = "0.253.0"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
