[package]
name = "ishtar-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
getrandom.workspace = true
ishtar-protocol = { path = "../protocol" }
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
tokio.workspace = true
tower-http.workspace = true
uuid.workspace = true
wasmi.workspace = true
wasmparser.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.5.0"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
wat = "1.253.0"
